@@ -1,4 +1,5 @@
 HEAD
+	+ Add systemQuota object class when setting user quota
 	+ Added explicit check for full name in EBox::Samba::User::create
 4.2.1
 	+ Remove External AD mode leftovers in menu when not configured
